@@ -20,12 +20,14 @@ import com.github.tomakehurst.wiremock.matching.RequestPatternBuilder;
 import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.net.Proxy.Type;
 import java.net.ProxySelector;
 import java.net.SocketAddress;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -41,6 +43,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 
 @ExtendWith(VertxExtension.class)
 class CS51ImplTest {
@@ -66,6 +69,8 @@ class CS51ImplTest {
   private static final String REPORT_TR = "TR";
   private static final String MSG_USAGE_NOT_READY = "Usage Not Ready for Requested Dates";
   private static final String MSG_UNRECOGNIZED_FIELD = "Unrecognized field \"Database\"";
+  private static final String NEW_REGISTRY_DOMAIN = "registry.countermetrics.org";
+  private static final String OLD_REGISTRY_DOMAIN = "registry.projectcounter.org";
   private static UsageDataProvider provider;
 
   @BeforeAll
@@ -159,11 +164,23 @@ class CS51ImplTest {
         .hasMessage(String.format(MSG_INVALID_SERVICE_URL, serviceUrlStr));
   }
 
-  @Test
-  void testReceiveValidReport(VertxTestContext testContext) {
+  private static String readBodyFile(String name) throws IOException {
+    try (InputStream is = CS51ImplTest.class.getResourceAsStream("/__files/" + name)) {
+      return new String(is.readAllBytes(), StandardCharsets.UTF_8);
+    }
+  }
+
+  @ParameterizedTest(name = "useOldRegistryDomain={0}")
+  @ValueSource(booleans = {false, true})
+  void testReceiveValidReport(boolean useOldRegistryDomain, VertxTestContext testContext)
+      throws IOException {
+    String body = readBodyFile("TR.json");
+    if (useOldRegistryDomain) {
+      assertThat(body).contains(NEW_REGISTRY_DOMAIN);
+      body = body.replace(NEW_REGISTRY_DOMAIN, OLD_REGISTRY_DOMAIN);
+    }
     serviceMock.stubFor(
-        get(urlPathEqualTo(PATH_TR))
-            .willReturn(aResponse().withStatus(200).withBodyFile("TR.json")));
+        get(urlPathEqualTo(PATH_TR)).willReturn(aResponse().withStatus(200).withBody(body)));
 
     new CS51Impl(provider)
         .fetchReport(REPORT_TR, BEGIN_DATE, END_DATE)
@@ -187,7 +204,8 @@ class CS51ImplTest {
                                     assertThat(r)
                                         .extracting("downloadTime")
                                         .doesNotContainNull()
-                                        .allMatch(time -> time.equals(r.get(0).getDownloadTime()));
+                                        .allMatch(
+                                            time -> time.equals(r.getFirst().getDownloadTime()));
                                     assertThat(r).extracting("report").doesNotContainNull();
                                     assertThat(r).extracting("failedAttempts").containsOnlyNulls();
                                   });
@@ -441,5 +459,34 @@ class CS51ImplTest {
     } finally {
       ProxySelector.setDefault(defaultProxySelector);
     }
+  }
+
+  @Test
+  void testTrailingSlashRedirect(final VertxTestContext testContext) {
+    // The redirect path
+    serviceMock.stubFor(
+        get(urlPathEqualTo(PATH_TR))
+            .willReturn(aResponse().withStatus(301).withHeader("Location", PATH_TR + "/")));
+
+    // The happy path
+    serviceMock.stubFor(
+        get(urlPathEqualTo(PATH_TR + "/"))
+            .willReturn(aResponse().withStatus(200).withBodyFile("TR.json")));
+
+    new CS51Impl(provider)
+        .fetchReport(REPORT_TR, BEGIN_DATE, END_DATE)
+        .onComplete(
+            ar -> {
+              testContext
+                  .verify(
+                      () -> {
+                        assertThat(ar.succeeded()).isTrue();
+                        // The URL we actually called
+                        serviceMock.verify(1, getRequestedFor(urlPathEqualTo(PATH_TR)));
+                        // The URL we got redirected to
+                        serviceMock.verify(1, getRequestedFor(urlPathEqualTo(PATH_TR + "/")));
+                      })
+                  .completeNow();
+            });
   }
 }
